# cpp-raytracer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  colour.h  ray.h
include/materials/: dielectric.h  lambertian.h  material.h  metal.h
include/objects/: hittable.h  hittable_group.h  sphere.h
src/: camera.cpp  main.cpp  ray.cpp
src/materials/: dielectric.cpp  lambertian.cpp  metal.cpp
src/objects/: hittable.cpp  sphere.cpp
